...

    var body: some View {
        NavigationStack {
            List {
                if(!searchText.isEmpty) {
                    NavigationLink(destination: DashboardView(city: searchText)) {
                        SearchResultRow(name: searchText, icon: "magnifyingglass")
                    }
                    .disabled(!isvalidCity(searchText))
                    .simultaneousGesture(TapGesture().onEnded {
                        let city = searchText.trimmingCharacters(in: .whitespacesAndNewlines)
                        if isvalidCity(city) {
                            searchHistory.addCity(city)
...
            }
            .navigationTitle("Search")
        }
        .searchable(
            text: $searchText,
            placement: .automatic,
            prompt: "Type here to search a city"
        )
        .onSubmit(of: .search) {
            let city = searchText.trimmingCharacters(in: .whitespacesAndNewlines)
            if(isvalidCity(city)) {
                searchHistory.addCity(city)
                readyToNavigate = true
...
