...
                        Button {
                            isUsingMetric = false
                        } label: {
                            Label("Fahrenheit", systemImage: isUsingMetric ? "degreesign.fahrenheit" : "checkmark")
                        }
                    } label: {
                        Label("Units", systemImage: "thermometer")
                    }
                }
            }
            .onDisappear {
                city = ""
            }
            .onAppear {
                if city.isEmpty {
                    city = favorites.first?.name ?? "Mendoza"
                }
                
                manager = FavoritesManager(context: context)
                let fav = favorites.first(where: { $0.name == city })
                let date = fav?.addedAt ?? Date()
                let now = Date()
...
